Debugged subjects_by_verb_pmi function

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,24 +425,29 @@
     "    # PMI measure how strongly the subject is associated with that verb. \n",
     "    # It calculates the joint probability of the subject and the verb appearing.\n",
     "\n",
-    "    total_tokens = len(doc)\n",
     "    # Counts tokens that only consist of alphabetic characters.\n",
     "    word_count = Counter(token.text.lower() for token in doc if token.is_alpha)\n",
+    "    total_tokens = sum(word_count.values())\n",
+    "\n",
     "    # Reutilizes subjects_by_verb_count function to get all the subjects of the verb.\n",
     "    subj_count = subjects_by_verb_count(doc, verb, n=None)\n",
     "    # Converts to dictionary to extract counts value by key subject.\n",
     "    subj_count = dict(subj_count)\n",
     "\n",
     "    pmi_scores = {}\n",
-    "    for subject, subj_count in subj_count.items():\n",
-    "        word_count = word_count [subject] / total_tokens\n",
-    "        joint_prob = subj_count / total_tokens\n",
-    "        if word_count > 0:\n",
-    "          pmi = math.log2(joint_prob / word_count) \n",
-    "        else: 0\n",
+    "    for subject, subject_count in subj_count.items():\n",
+    "        word_prob = word_count [subject] / total_tokens\n",
+    "        joint_prob = subject_count / total_tokens\n",
+    "        if word_prob > 0:\n",
+    "            pmi = math.log2(joint_prob / word_prob)\n",
+    "        else:\n",
+    "            pmi = 0\n",
+    "        pmi_scores[subject] = pmi\n",
     "    \n",
     "    # Converts to list of tuples sorted by pmi score and gets only the firts n elements.\n",
     "    subjs_by_verb_pmi = sorted(pmi_scores.items(), key=lambda x: x[1], reverse=True)[:n]\n",
+    "    # Round pmi scores to 3 decimal places\n",
+    "    subjs_by_verb_pmi = [(subject, round(pmi, 3)) for subject, pmi in subjs_by_verb_pmi]\n",
     "    return subjs_by_verb_pmi\n"
    ]
   },
@@ -459,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -613,19 +618,58 @@
       "[('he', 25), ('they', 20), ('you', 5), ('i', 5), ('who', 3), ('she', 2), ('all', 2), ('we', 2), ('man', 2), ('nobody', 1)]\n",
       "\n",
       "\n",
-      "Sense_and_Sensibility\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'float' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[52]\u001b[39m\u001b[32m, line 27\u001b[39m\n\u001b[32m     25\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i, row \u001b[38;5;129;01min\u001b[39;00m df.iterrows():\n\u001b[32m     26\u001b[39m     \u001b[38;5;28mprint\u001b[39m(row[\u001b[33m\"\u001b[39m\u001b[33mtitle\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[43msubjects_by_verb_pmi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mparsed\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mhear\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[32m     28\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[50]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36msubjects_by_verb_pmi\u001b[39m\u001b[34m(doc, verb, n)\u001b[39m\n\u001b[32m     16\u001b[39m pmi_scores = {}\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m subject, subj_count \u001b[38;5;129;01min\u001b[39;00m subj_count.items():\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m     word_count = \u001b[43mword_count\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43msubject\u001b[49m\u001b[43m]\u001b[49m / total_tokens\n\u001b[32m     19\u001b[39m     joint_prob = subj_count / total_tokens\n\u001b[32m     20\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m word_count > \u001b[32m0\u001b[39m:\n",
-      "\u001b[31mTypeError\u001b[39m: 'float' object is not subscriptable"
+      "Sense_and_Sensibility\n",
+      "[('you', -5.94559784705763), ('i', -6.130018898134545), ('palmer', -6.228818690495881), ('jennings', -6.285402218862249), ('us', -6.459431618637297), ('both', -6.539158811108032), ('they', -6.680886920719692), ('me', -6.741466986401147), ('she', -6.818353921006861), ('elinor', -6.824428435416546)]\n",
+      "\n",
+      "\n",
+      "North_and_South\n",
+      "[('nobody', -3.1699250014423126), ('neighbours', -3.584962500721156), ('fools', -3.807354922057604), ('itself', -5.392317422778761), ('she', -5.5996607329613415), ('they', -6.076815597050831), ('world', -6.149747119504682), ('lady', -6.247927513443585), ('we', -6.422905742612183), ('i', -6.47186872187552)]\n",
+      "\n",
+      "\n",
+      "A_Tale_of_Two_Cities\n",
+      "[('d’ye', 0), ('she', -5.526694845541976), ('monseigneur', -5.741466986401147), ('mother', -5.78135971352466), ('voice', -6.392317422778761), ('i', -6.54873018356182), ('he', -6.687278470065853), ('jerry', -6.754887502163468), ('they', -6.825276830054866), ('you', -6.887728338521624)]\n",
+      "\n",
+      "\n",
+      "Erewhon\n",
+      "[('destruction', -2.584962500721156), ('i', -5.588911846305131), ('she', -6.303780748177103), ('machines', -6.339850002884625), ('he', -7.324180546618741), ('who', -8.016808287686555), ('they', -8.10503547069829), ('one', -8.535275376620804), ('we', -8.62935662007961)]\n",
+      "\n",
+      "\n",
+      "The_American\n",
+      "[('duchess', -5.169925001442312), ('we', -7.159871336778389), ('he', -7.337753062049045), ('they', -7.791162888555019), ('who', -7.930737337562887), ('i', -8.032999364758341), ('you', -8.116343961237469), ('she', -8.278914019499938), ('one', -8.361943773735241), ('newman', -8.542064542283443)]\n",
+      "\n",
+      "\n",
+      "Dorian_Gray\n",
+      "[('hast', 0.0), ('jars', -1.0), ('lovers', -1.5849625007211563), ('i', -6.140403757174485), ('he', -6.588714635582264), ('one', -7.18322182405577), ('who', -7.807354922057605), ('dorian', -8.693486957499326), ('you', -8.909893083770042)]\n",
+      "\n",
+      "\n",
+      "Tess_of_the_DUrbervilles\n",
+      "[('overhead', -2.807354922057604), ('mansion', -3.584962500721156), ('brooks', -3.807354922057604), ('queen', -3.9068905956085187), ('latter', -4.523561956057013), ('lady', -4.954196310386875), ('nobody', -5.247927513443585), ('soul', -5.554588851677638), ('she', -5.912727535630803), ('who', -5.930737337562886)]\n",
+      "\n",
+      "\n",
+      "The_Golden_Bowl\n",
+      "[('man', -7.087462841250339), ('amerigo', -7.189824558880017), ('who', -7.948367231584678), ('she', -8.06204613772049), ('maggie', -8.436711542137214), ('you', -8.703211467391146), ('he', -8.878561872550025), ('him', -9.451211111832329), ('which', -10.025139562278508), ('they', -10.040289721025717)]\n",
+      "\n",
+      "\n",
+      "The_Secret_Garden\n",
+      "[(\"one'll\", 0), (\"tha'd\", 0), (\"'s\", 0), ('whoever', -1.0), ('lennox', -3.0874628412503395), ('chap', -3.700439718141092), ('roach', -3.9068905956085187), ('we', -4.247927513443585), ('sound', -5.20945336562895), ('sowerby', -5.247927513443585)]\n",
+      "\n",
+      "\n",
+      "Portrait_of_the_Artist\n",
+      "[('listener', -1.0), ('anyone', -2.584962500721156), ('burst', -2.8073549220576037), ('newman', -3.0), ('he', -4.944244010090888), ('boy', -5.357552004618084), ('you', -5.908892948519667), ('i', -6.221587121264805), ('who', -6.321928094887363), ('stephen', -6.436295119839363)]\n",
+      "\n",
+      "\n",
+      "The_Black_Moth\n",
+      "[(\"ye've\", 0), ('_', 0), ('bel', -1.0), ('bettison', -4.643856189774724), ('street', -4.807354922057605), ('we', -5.098032082960526), ('i', -6.143141865505354), ('madam', -6.266786540694901), ('richard', -7.044394119358453), ('they', -7.392317422778761)]\n",
+      "\n",
+      "\n",
+      "Orlando\n",
+      "[(\"man,'--orlando\", 0), ('children', -3.0), ('god', -3.807354922057604), ('reader', -4.584962500721156), ('she', -5.960829402719322), ('you', -6.3750394313469245), ('i', -6.622051819456376), ('orlando', -6.791162888555018), ('he', -6.875639661624079), ('one', -6.96193195916648)]\n",
+      "\n",
+      "\n",
+      "Blood_Meridian\n",
+      "[('nobody', -3.3219280948873626), ('who', -5.7369655941662066), ('she', -5.906890595608519), ('they', -6.391458420049667), ('riders', -6.459431618637297), ('i', -6.6293566200796095), ('he', -6.7398481026993275), ('we', -6.864186144654281), ('you', -6.882643049361841), ('all', -7.543031820255238)]\n",
+      "\n",
+      "\n"
      ]
     }
    ],
