Commented print examples in functions

--- a/PartOne.ipynb
+++ b/PartOne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,18 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Sense_and_Sensibility': 0.05850947122065384, 'North_and_South': 0.06580904022624899, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'Erewhon': 0.09698006527621059, 'The_American': 0.06756581683792795, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Golden_Bowl': 0.04813433820231636, 'The_Secret_Garden': 0.056573232870154, 'Portrait_of_the_Artist': 0.10970434538631502, 'The_Black_Moth': 0.07621856866537717, 'Orlando': 0.11753228191839728, 'Blood_Meridian': 0.08562941459421598}\n",
-      "{'Orlando': 0.11753228191839728, 'Portrait_of_the_Artist': 0.10970434538631502, 'Erewhon': 0.09698006527621059, 'Blood_Meridian': 0.08562941459421598, 'Dorian_Gray': 0.08498209005457125, 'Tess_of_the_DUrbervilles': 0.08015054009113641, 'The_Black_Moth': 0.07621856866537717, 'A_Tale_of_Two_Cities': 0.07287318093056312, 'The_American': 0.06756581683792795, 'North_and_South': 0.06580904022624899, 'Sense_and_Sensibility': 0.05850947122065384, 'The_Secret_Garden': 0.056573232870154, 'The_Golden_Bowl': 0.04813433820231636}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def nltk_ttr(text):\n",
     "    \"\"\"Calculates the type-token ratio of a text. Text is tokenized using nltk.word_tokenize.\"\"\"\n",
@@ -129,11 +120,10 @@
     "\n",
     "df = read_novels()\n",
     "ttr_by_novel = nltk_ttr(df)\n",
-    "print(ttr_by_novel)\n",
+    "# print(ttr_by_novel)\n",
     "#TTR sorted in descending order. Shows grade of lexical diversity within a text.\n",
-    "\n",
     "sorted_ttr = dict(sorted(ttr_by_novel.items(), key=lambda item: item[1], reverse=True))\n",
-    "print(sorted_ttr)\n"
+    "# print(sorted_ttr)\n"
    ]
   },
   {
@@ -231,20 +221,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\"\\nExample:\\ndf = read_novels()\\nd = dict_of_syl()\\nfk_grades = flesch_kincaid(df, d)\\n# Sorted by highest to lowest grade\\nfor title, grade in sorted(fk_grades.items(), key=lambda x: x[1], reverse=True):\\n    print(f\"{title}: {grade:.2f}\")\\n'"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def flesch_kincaid(df, d):\n",
     "    \"\"\"Returns a dictionary mapping novel titles to their Flesch-Kincaid grade level.\n",
@@ -263,53 +242,32 @@
     "\n",
     "    return fk_grade\n",
     "\n",
-    "\"\"\"\"\n",
-    "Example:\n",
-    "df = read_novels()\n",
-    "d = dict_of_syl()\n",
-    "fk_grades = flesch_kincaid(df, d)\n",
-    "# Sorted by highest to lowest grade\n",
-    "for title, grade in sorted(fk_grades.items(), key=lambda x: x[1], reverse=True):\n",
-    "    print(f\"{title}: {grade:.2f}\")\n",
-    "\"\"\""
+    "\n",
+    "# df = read_novels()\n",
+    "# d = dict_of_syl()\n",
+    "# fk_grades = flesch_kincaid(df, d)\n",
+    "# for title, grade in sorted(fk_grades.items(), key=lambda x: x[1], reverse=True):\n",
+    "    #print(f\"{title}: {grade:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximun text length: 1158935 characters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check the longest text length in our dataset\n",
     "df[\"text_length\"] = df[\"text\"].apply(len)\n",
     "max_length = df[\"text_length\"].max()\n",
-    "print(f\"Maximun text length: {max_length} characters\")\n"
+    "# print(f\"Maximun text length: {max_length} characters\")\n",
+    "# Maximun text length: 1158935 characters\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Check printing for longest text\\nlongest_text = df.loc[df[\"text_length\"].idxmax(), \"text\"]\\nparsed_lt = nlp(longest_text)\\nprint(f\"Longest text number of tokens: {len(parsed_lt)}\")\\n'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parse(df, store_path=Path.cwd() / \"pickles\", out_name=\"parsed.pickle\"):\n",
     "    \"\"\"Parses the text of a DataFrame using spaCy, stores the parsed docs as a column and writes \n",
@@ -332,11 +290,10 @@
     "    return df\n",
     "\n",
     "\n",
-    "\"\"\" Check printing for longest text\n",
-    "longest_text = df.loc[df[\"text_length\"].idxmax(), \"text\"]\n",
-    "parsed_lt = nlp(longest_text)\n",
-    "print(f\"Longest text number of tokens: {len(parsed_lt)}\")\n",
-    "\"\"\"\n"
+    "# Check printing for longest text\n",
+    "# longest_text = df.loc[df[\"text_length\"].idxmax(), \"text\"]\n",
+    "# parsed_lt = nlp(longest_text)\n",
+    "# print(f\"Longest text number of tokens: {len(parsed_lt)}\")\n"
    ]
   },
   {
