Implemented clean dataframe dimentions

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "531f9ad5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows: 7815\n",
+      "Number of columns: 8\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"p2-texts/hansard40000.csv\")\n",
     "\n",
@@ -27,9 +36,20 @@
     "df = df[df['party'].isin(main_parties)]\n",
     "# print(df['party'].value_counts())\n",
     "\n",
-    "# 4th party 'Speaker'. Remove\n",
+    "# 4th party 'Speaker'. Remove it.\n",
     "df = df[df['party'] != 'Speaker']\n",
-    "# print(df['party'].value_counts())\n"
+    "# print(df['party'].value_counts())\n",
+    "\n",
+    "df = df[df[\"speech_class\"] == \"Speech\"]\n",
+    "speech_lengths = df[\"speech\"].str.len()\n",
+    "speeches = speech_lengths >= 1000\n",
+    "df = df[speeches]\n",
+    "\n",
+    "rows, columns = df.shape\n",
+    "print(f\"Number of rows: {rows}\")\n",
+    "print(f\"Number of columns: {columns}\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
