Implemented clean_hansard function

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -26,30 +26,33 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"p2-texts/hansard40000.csv\")\n",
+    "def clean_hansard(filepath):\n",
+    "    \"\"\"Returns a clean dataframe from the hansard dataset\"\"\"\n",
+    "    df = pd.read_csv(filepath)\n",
+    "    df['party'] = df['party'].replace({'Labour (Co-op)': 'Labour'})\n",
+    "    # print(df['party'].unique())\n",
     "\n",
-    "df['party'] = df['party'].replace({'Labour (Co-op)': 'Labour'})\n",
-    "# print(df['party'].unique())\n",
+    "    party_counts = df['party'].value_counts()\n",
+    "    main_parties = party_counts.nlargest(4).index.tolist()\n",
+    "    df = df[df['party'].isin(main_parties)]\n",
+    "    # print(df['party'].value_counts())\n",
     "\n",
-    "party_counts = df['party'].value_counts()\n",
-    "main_parties = party_counts.nlargest(4).index.tolist()\n",
-    "df = df[df['party'].isin(main_parties)]\n",
-    "# print(df['party'].value_counts())\n",
+    "    # 4th party 'Speaker'. Remove it.\n",
+    "    df = df[df['party'] != 'Speaker']\n",
+    "    # print(df['party'].value_counts())\n",
     "\n",
-    "# 4th party 'Speaker'. Remove it.\n",
-    "df = df[df['party'] != 'Speaker']\n",
-    "# print(df['party'].value_counts())\n",
+    "    df = df[df[\"speech_class\"] == \"Speech\"]\n",
+    "    speech_lengths = df[\"speech\"].str.len()\n",
+    "    speeches = speech_lengths >= 1000\n",
+    "    df = df[speeches]\n",
     "\n",
-    "df = df[df[\"speech_class\"] == \"Speech\"]\n",
-    "speech_lengths = df[\"speech\"].str.len()\n",
-    "speeches = speech_lengths >= 1000\n",
-    "df = df[speeches]\n",
+    "    rows, columns = df.shape\n",
+    "    print(f\"Number of rows: {rows}\")\n",
+    "    print(f\"Number of columns: {columns}\")\n",
     "\n",
-    "rows, columns = df.shape\n",
-    "print(f\"Number of rows: {rows}\")\n",
-    "print(f\"Number of columns: {columns}\")\n",
+    "    return df\n",
     "\n",
-    "\n"
+    "df = clean_hansard(\"p2-texts/hansard40000.csv\")\n"
    ]
   }
  ],
