--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -53,6 +56,30 @@
     "    return df\n",
     "\n",
     "df = clean_hansard(\"p2-texts/hansard40000.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a33040f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vectorizer that removes common English words and limits the number of features to the 3000 most frequent terms.\n",
+    "vectorizer = TfidfVectorizer(stop_words='english', max_features=3000)\n",
+    "\n",
+    "# Split the data into a train and test set, using stratified sampling, with a random seed of 26.\n",
+    "features = df[\"speech\"]\n",
+    "labels = df[\"party\"]\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split\n",
+    "# Stratified by labels ensures class proportions whithin parties.\n",
+    "train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "   "
    ]
   }
  ],
