Modified Vectorizer and splited dataset

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [],
@@ -68,17 +68,16 @@
     "# Vectorizer that removes common English words and limits the number of features to the 3000 most frequent terms.\n",
     "vectorizer = TfidfVectorizer(stop_words='english', max_features=3000)\n",
     "\n",
-    "# Split the data into a train and test set, using stratified sampling, with a random seed of 26.\n",
-    "features = df[\"speech\"]\n",
+    "# Vectorise the speeches\n",
+    "features = vectorizer.fit_transform(df['speech'])\n",
     "labels = df[\"party\"]\n",
     "\n",
-    "features_train, features_test, labels_train, labels_test = train_test_split\n",
-    "# Stratified by labels ensures class proportions whithin parties.\n",
-    "train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "# Stratified by labels to ensure class proportions whithin parties, with a random seed of 26.\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "# print(features_train.shape, features_test.shape)\n",
+    "# print(labels_train.value_counts(normalize=True))\n",
+    "# The data set is imbalanced (Conservative: 0.616603, Labour: 0.296545, Scottish National Party: 0.086852)\n",
     "   "
    ]
   }
