--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,14 @@
     "import pandas as pd\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -79,6 +81,27 @@
     "# print(labels_train.value_counts(normalize=True))\n",
     "# The data set is imbalanced (Conservative: 0.616603, Labour: 0.296545, Scottish National Party: 0.086852)\n",
     "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f63a418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Train RandomForest (with n_estimators=300) and SVM with linear kernel classifiers on the training set, and print the scikit-learn macro-average f1 score and\n",
+    "classification report for each classifier on the test set. The label that you are\n",
+    "trying to predict is the 'party' value.\"\"\"\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test\n",
+    "\n",
+    "# 300 trees in the Random Forest, with a random seed of 26.\n",
+    "random_forest = RandomForestClassifier(n_estimators=300, random_state=26)\n",
+    "random_forest.fit(features_train, labels_train)\n",
+    "rf_predict = random_forest.predict(features_test)\n",
+    "\n",
+    "svm = SVC "
    ]
   }
  ],
