--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,9 @@
     "random_forest.fit(features_train, labels_train)\n",
     "rf_predict = random_forest.predict(features_test)\n",
     "\n",
-    "svm = SVC "
+    "svm = SVC(kernel='linear', random_state=26)\n",
+    "svm.fit(features_train, labels_train)\n",
+    "svm_predict = svm.predict(features_test)"
    ]
   }
  ],
