--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,9 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC\n"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import f1_score, classification_report\n",
+    "\n"
    ]
   },
   {
@@ -85,10 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "9f63a418",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'                         precision    recall  f1-score   support\\n\\n           Conservative       0.85      0.92      0.89       964\\n                 Labour       0.79      0.71      0.75       463\\nScottish National Party       0.83      0.65      0.73       136\\n\\n               accuracy                           0.83      1563\\n              macro avg       0.83      0.76      0.79      1563\\n           weighted avg       0.83      0.83      0.83      1563\\n'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"Train RandomForest (with n_estimators=300) and SVM with linear kernel classifiers on the training set, and print the scikit-learn macro-average f1 score and\n",
     "classification report for each classifier on the test set. The label that you are\n",
@@ -101,9 +114,15 @@
     "random_forest.fit(features_train, labels_train)\n",
     "rf_predict = random_forest.predict(features_test)\n",
     "\n",
-    "svm = SVC(kernel='linear', random_state=26)\n",
+    "f1_score(labels_test, rf_predict, average=\"macro\")\n",
+    "classification_report(labels_test, rf_predict)\n",
+    "\n",
+    "svm = SVC(kernel=\"linear\", random_state=26)\n",
     "svm.fit(features_train, labels_train)\n",
-    "svm_predict = svm.predict(features_test)"
+    "svm_predict = svm.predict(features_test)\n",
+    "\n",
+    "f1_score(labels_test, svm_predict, average=\"macro\")\n",
+    "classification_report(labels_test, svm_predict)\n"
    ]
   }
  ],
