Added prints to f1 scores and classification reports

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -87,19 +87,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'                         precision    recall  f1-score   support\\n\\n           Conservative       0.85      0.92      0.89       964\\n                 Labour       0.79      0.71      0.75       463\\nScottish National Party       0.83      0.65      0.73       136\\n\\n               accuracy                           0.83      1563\\n              macro avg       0.83      0.76      0.79      1563\\n           weighted avg       0.83      0.83      0.83      1563\\n'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest classifier\n",
+      "f1 score: 0.6269718149483269\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.74      0.98      0.84       964\n",
+      "                 Labour       0.79      0.43      0.56       463\n",
+      "Scottish National Party       0.96      0.32      0.48       136\n",
+      "\n",
+      "               accuracy                           0.76      1563\n",
+      "              macro avg       0.83      0.58      0.63      1563\n",
+      "           weighted avg       0.78      0.76      0.73      1563\n",
+      "\n",
+      "SVM linear classifier\n",
+      "f1 score: 0.7871964473639963\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.85      0.92      0.89       964\n",
+      "                 Labour       0.79      0.71      0.75       463\n",
+      "Scottish National Party       0.83      0.65      0.73       136\n",
+      "\n",
+      "               accuracy                           0.83      1563\n",
+      "              macro avg       0.83      0.76      0.79      1563\n",
+      "           weighted avg       0.83      0.83      0.83      1563\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -114,15 +136,18 @@
     "random_forest.fit(features_train, labels_train)\n",
     "rf_predict = random_forest.predict(features_test)\n",
     "\n",
-    "f1_score(labels_test, rf_predict, average=\"macro\")\n",
-    "classification_report(labels_test, rf_predict)\n",
+    "random_forest_f1 = f1_score(labels_test, rf_predict, average=\"macro\")\n",
+    "random_forest_report = classification_report(labels_test, rf_predict)\n",
     "\n",
     "svm = SVC(kernel=\"linear\", random_state=26)\n",
     "svm.fit(features_train, labels_train)\n",
     "svm_predict = svm.predict(features_test)\n",
     "\n",
-    "f1_score(labels_test, svm_predict, average=\"macro\")\n",
-    "classification_report(labels_test, svm_predict)\n"
+    "svm_f1 = f1_score(labels_test, svm_predict, average=\"macro\")\n",
+    "svm_report = classification_report(labels_test, svm_predict)\n",
+    "\n",
+    "print(f\"Random Forest classifier\\nf1 score: {random_forest_f1}\\nClassification report:\\n{random_forest_report}\")\n",
+    "print(f\"SVM linear classifier\\nf1 score: {svm_f1}\\nClassification report:\\n{svm_report}\")\n"
    ]
   }
  ],
