Implemented Random Forest and SVM performance function

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -125,29 +125,28 @@
     }
    ],
    "source": [
-    "\"\"\"Train RandomForest (with n_estimators=300) and SVM with linear kernel classifiers on the training set, and print the scikit-learn macro-average f1 score and\n",
-    "classification report for each classifier on the test set. The label that you are\n",
-    "trying to predict is the 'party' value.\"\"\"\n",
+    "def random_forest_and_linearsvm_performance(x_train, x_test, y_train, y_test):\n",
+    "    \"\"\"Trains RandomForest and SVM classifiers and prints macro-average f1 score and classification reports\"\"\"\n",
     "\n",
-    "features_train, features_test, labels_train, labels_test\n",
+    "    # 300 trees in the Random Forest, with a random seed of 26.\n",
+    "    random_forest = RandomForestClassifier(n_estimators=300, random_state=26)\n",
+    "    random_forest.fit(features_train, labels_train)\n",
+    "    rf_predict = random_forest.predict(features_test)\n",
     "\n",
-    "# 300 trees in the Random Forest, with a random seed of 26.\n",
-    "random_forest = RandomForestClassifier(n_estimators=300, random_state=26)\n",
-    "random_forest.fit(features_train, labels_train)\n",
-    "rf_predict = random_forest.predict(features_test)\n",
+    "    random_forest_f1 = f1_score(labels_test, rf_predict, average=\"macro\")\n",
+    "    random_forest_report = classification_report(labels_test, rf_predict)\n",
     "\n",
-    "random_forest_f1 = f1_score(labels_test, rf_predict, average=\"macro\")\n",
-    "random_forest_report = classification_report(labels_test, rf_predict)\n",
+    "    svm = SVC(kernel=\"linear\", random_state=26)\n",
+    "    svm.fit(features_train, labels_train)\n",
+    "    svm_predict = svm.predict(features_test)\n",
     "\n",
-    "svm = SVC(kernel=\"linear\", random_state=26)\n",
-    "svm.fit(features_train, labels_train)\n",
-    "svm_predict = svm.predict(features_test)\n",
+    "    svm_f1 = f1_score(labels_test, svm_predict, average=\"macro\")\n",
+    "    svm_report = classification_report(labels_test, svm_predict)\n",
     "\n",
-    "svm_f1 = f1_score(labels_test, svm_predict, average=\"macro\")\n",
-    "svm_report = classification_report(labels_test, svm_predict)\n",
+    "    print(f\"Random Forest classifier\\nf1 score: {random_forest_f1}\\nClassification report:\\n{random_forest_report}\")\n",
+    "    print(f\"SVM linear classifier\\nf1 score: {svm_f1}\\nClassification report:\\n{svm_report}\")\n",
     "\n",
-    "print(f\"Random Forest classifier\\nf1 score: {random_forest_f1}\\nClassification report:\\n{random_forest_report}\")\n",
-    "print(f\"SVM linear classifier\\nf1 score: {svm_f1}\\nClassification report:\\n{svm_report}\")\n"
+    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)\n"
    ]
   }
  ],
