--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -148,6 +148,60 @@
     "\n",
     "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0082716d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest classifier\n",
+      "f1 score: 0.6748975043716996\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.76      0.97      0.85       964\n",
+      "                 Labour       0.80      0.49      0.61       463\n",
+      "Scottish National Party       0.95      0.40      0.57       136\n",
+      "\n",
+      "               accuracy                           0.78      1563\n",
+      "              macro avg       0.84      0.62      0.67      1563\n",
+      "           weighted avg       0.79      0.78      0.75      1563\n",
+      "\n",
+      "SVM linear classifier\n",
+      "f1 score: 0.7955796360349998\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.86      0.92      0.89       964\n",
+      "                 Labour       0.79      0.73      0.76       463\n",
+      "Scottish National Party       0.84      0.65      0.74       136\n",
+      "\n",
+      "               accuracy                           0.84      1563\n",
+      "              macro avg       0.83      0.77      0.80      1563\n",
+      "           weighted avg       0.84      0.84      0.84      1563\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Adjust the parameters of the Tfidfvectorizer so that unigrams, bi-grams and\n",
+    "tri-grams will be considered as features, limiting the total number of features to\n",
+    "3000. Print the classification report as in 2(c) again using these parameters.\"\"\"\n",
+    "\n",
+    "# Moified vectorizer to include unigrams (1 word), bigrams (2 word) and trigrams (3 word) sequences.\n",
+    "vectorizer = TfidfVectorizer(stop_words='english', max_features=3000, ngram_range=(1,3))\n",
+    "features = vectorizer.fit_transform(df['speech'])\n",
+    "labels = df['party']\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "\n",
+    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)\n"
+   ]
   }
  ],
  "metadata": {
