--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -189,11 +189,10 @@
     }
    ],
    "source": [
-    "\"\"\"Adjust the parameters of the Tfidfvectorizer so that unigrams, bi-grams and\n",
-    "tri-grams will be considered as features, limiting the total number of features to\n",
-    "3000. Print the classification report as in 2(c) again using these parameters.\"\"\"\n",
+    "\"\"\"Prints the classification report adjusting the parameters of the Tfidfvectorizer so that unigrams, bi-grams and\n",
+    "tri-grams are considered as features.\"\"\"\n",
     "\n",
-    "# Moified vectorizer to include unigrams (1 word), bigrams (2 word) and trigrams (3 word) sequences.\n",
+    "# Modified vectorizer to include unigrams (1 word), bigrams (2 word) and trigrams (3 word) sequences.\n",
     "vectorizer = TfidfVectorizer(stop_words='english', max_features=3000, ngram_range=(1,3))\n",
     "features = vectorizer.fit_transform(df['speech'])\n",
     "labels = df['party']\n",
@@ -201,6 +200,14 @@
     "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
     "\n",
     "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93c6e74b",
+   "metadata": {},
+   "source": [
+    "Adding bigrams and trigrams improved performance as F1 and accuracy slightly increased."
    ]
   }
  ],
