--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import f1_score, classification_report\n",
-    "\n"
+    "from sklearn.metrics import f1_score, classification_report\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -67,7 +66,20 @@
    "execution_count": null,
    "id": "a33040f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6252, 3000) (1563, 3000)\n",
+      "party\n",
+      "Conservative               0.616603\n",
+      "Labour                     0.296545\n",
+      "Scottish National Party    0.086852\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Vectorizer that removes common English words and limits the number of features to the 3000 most frequent terms.\n",
     "vectorizer = TfidfVectorizer(stop_words='english', max_features=3000)\n",
@@ -80,14 +92,20 @@
     "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
     "\n",
     "# print(features_train.shape, features_test.shape)\n",
-    "# print(labels_train.value_counts(normalize=True))\n",
-    "# The data set is imbalanced (Conservative: 0.616603, Labour: 0.296545, Scottish National Party: 0.086852)\n",
-    "   "
+    "# print(labels_train.value_counts(normalize=True))   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90e0f82d",
+   "metadata": {},
+   "source": [
+    "The dataset is imbalanced (Conservative: 0.616603, Labour: 0.296545, Scottish National Party: 0.086852)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -151,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -208,6 +226,45 @@
    "metadata": {},
    "source": [
     "Adding bigrams and trigrams improved performance as F1 and accuracy slightly increased."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "188a7768",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' def custom_tokenizer(text):\\n    text = text.lower(|)\\n\\n    return tokens '"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" Implement a new custom tokenizer and pass it to the tokenizer argument of Tfidfvectorizer. \n",
+    "Try to achieve the best classification performance with same number of features (3000) and the same three classifiers. \n",
+    "Print the classification report for the best performing classifier using your tokenizer.\"\"\"\n",
+    "\n",
+    "def custom_tokenizer(text):\n",
+    "    text = text.lower()\n",
+    "    \n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6095045",
+   "metadata": {},
+   "source": [
+    "For the custom tokenizer will try first to clean the text as in the parsing unwanted characters like  \\n, \\n\\n, ', ., -- were observed (may try with NLTK and then with spaCy).\n",
+    "Will try also with up to 2 ngrams.\n",
+    "Will try removing rare tokens.\n",
+    "Will try removing very frequent words that may be used by every party and may not be distinctive."
    ]
   }
  ],
