--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import nltk\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import f1_score, classification_report\n"
+    "from sklearn.metrics import f1_score, classification_report\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "nltk.download('punkt') \n"
    ]
   },
   {
@@ -233,27 +237,23 @@
    "execution_count": null,
    "id": "188a7768",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' def custom_tokenizer(text):\\n    text = text.lower(|)\\n\\n    return tokens '"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" Implement a new custom tokenizer and pass it to the tokenizer argument of Tfidfvectorizer. \n",
     "Try to achieve the best classification performance with same number of features (3000) and the same three classifiers. \n",
     "Print the classification report for the best performing classifier using your tokenizer.\"\"\"\n",
     "\n",
-    "def custom_tokenizer(text):\n",
-    "    text = text.lower()\n",
-    "    \n",
-    "    return tokens"
+    "def custom_tokenizer_nltk(text):\n",
+    "    tokens = word_tokenize(text)\n",
+    "    # Keep only alphabetical words (remove numbers and punctuation).\n",
+    "    clean_tokens = []\n",
+    "    for token in tokens:\n",
+    "        if token.isalpha():\n",
+    "            clean_tokens.append(token.lower())\n",
+    "    return clean_tokens\n",
+    "        \n",
+    "# text = \"Hello, world! This is a test\"\n",
+    "# print(custom_tokenizer_nltk(text))"
    ]
   },
   {
