--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,10 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "11ad6c29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import nltk\n",
@@ -22,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -67,23 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a33040f6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6252, 3000) (1563, 3000)\n",
-      "party\n",
-      "Conservative               0.616603\n",
-      "Labour                     0.296545\n",
-      "Scottish National Party    0.086852\n",
-      "Name: proportion, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Vectorizer that removes common English words and limits the number of features to the 3000 most frequent terms.\n",
     "vectorizer = TfidfVectorizer(stop_words='english', max_features=3000)\n",
@@ -109,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -173,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -234,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -254,6 +260,73 @@
     "        \n",
     "# text = \"Hello, world! This is a test\"\n",
     "# print(custom_tokenizer_nltk(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "43a23e0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest classifier\n",
+      "f1 score: 0.6890668398952485\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.76      0.96      0.85       964\n",
+      "                 Labour       0.80      0.47      0.60       463\n",
+      "Scottish National Party       0.91      0.47      0.62       136\n",
+      "\n",
+      "               accuracy                           0.78      1563\n",
+      "              macro avg       0.83      0.64      0.69      1563\n",
+      "           weighted avg       0.79      0.78      0.76      1563\n",
+      "\n",
+      "SVM linear classifier\n",
+      "f1 score: 0.7909362022889694\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.86      0.92      0.89       964\n",
+      "                 Labour       0.78      0.72      0.75       463\n",
+      "Scottish National Party       0.84      0.65      0.74       136\n",
+      "\n",
+      "               accuracy                           0.84      1563\n",
+      "              macro avg       0.83      0.76      0.79      1563\n",
+      "           weighted avg       0.83      0.84      0.83      1563\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer(tokenizer=custom_tokenizer_nltk, stop_words='english', max_features=3000,\n",
+    "    ngram_range=(1, 3))\n",
+    "\n",
+    "features = vectorizer.fit_transform(df['speech'])\n",
+    "labels = df['party']\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "\n",
+    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9537bb36",
+   "metadata": {},
+   "source": [
+    "The NLTK custom_tokenizer shows slighlty improvement in the Random Forest classifier but not in SVM."
    ]
   },
   {
