Trial custom vectorizer with unigram and biogram

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -330,6 +330,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "45515b41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest classifier\n",
+      "f1 score: 0.6772205613967802\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.76      0.96      0.85       964\n",
+      "                 Labour       0.79      0.48      0.60       463\n",
+      "Scottish National Party       0.91      0.43      0.59       136\n",
+      "\n",
+      "               accuracy                           0.77      1563\n",
+      "              macro avg       0.82      0.62      0.68      1563\n",
+      "           weighted avg       0.78      0.77      0.75      1563\n",
+      "\n",
+      "SVM linear classifier\n",
+      "f1 score: 0.7881888199127838\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.85      0.92      0.88       964\n",
+      "                 Labour       0.78      0.72      0.75       463\n",
+      "Scottish National Party       0.85      0.65      0.73       136\n",
+      "\n",
+      "               accuracy                           0.83      1563\n",
+      "              macro avg       0.83      0.76      0.79      1563\n",
+      "           weighted avg       0.83      0.83      0.83      1563\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Try with up to bigrams (2 word) sequence.\n",
+    "\n",
+    "vectorizer = TfidfVectorizer(tokenizer=custom_tokenizer_nltk, stop_words='english', max_features=3000,\n",
+    "    ngram_range=(1, 2))\n",
+    "\n",
+    "features = vectorizer.fit_transform(df['speech'])\n",
+    "labels = df['party']\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "\n",
+    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c6095045",
    "metadata": {},
