--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -350,8 +350,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9142225",
+   "metadata": {},
+   "source": [
+    "The performance of the custom tokenizer decreses with biograms and even more with only unigrams."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1c1b460e",
    "metadata": {},
    "outputs": [
@@ -400,7 +408,7 @@
     "# Experiment different values for removing rare terms like typos or very common ones that may no distinguish a party in particular.\n",
     "\n",
     "vectorizer = TfidfVectorizer(tokenizer=custom_tokenizer_nltk, stop_words='english', max_features=3000,\n",
-    "    ngram_range=(1, 3), min_df=3, max_df=0.8)\n",
+    "    ngram_range=(1, 3), min_df=3)\n",
     "\n",
     "features = vectorizer.fit_transform(df['speech'])\n",
     "labels = df['party']\n",
@@ -415,22 +423,30 @@
    "id": "a0bf8d04",
    "metadata": {},
    "source": [
-    "(1, 3), min_df=2, max_df=0.8 Results \n",
-    "Random Forest classifier\n",
-    "f1 score: 0.6870290776987082 lower\n",
+    "RF f1 score: 0.6890668398952485\n",
+    "SVM 0.7909362022889694\n",
+    "\n",
+    "min_df=2, max_df=1.0\n",
+    "RF f1 score: 0.6870290776987082 lower\n",
+    "0.7915507427870954 slightly better\n",
+    "min_df=2, max_df=0.8 Results \n",
+    "RF f1 score: 0.6870290776987082 same\n",
     "SVM linear classifier\n",
-    "f1 score: 0.7915507427870954 slightly better\n",
+    "f1 score: 0.7915507427870954 same\n",
+    "min_df=3, max_df=1.0\n",
+    "RF 0.6778256216611293 worst\n",
+    "SVM 0.7940558943755874 better # best performance\n",
     "min_df=3, max_df=0.8\n",
-    "RF f1 score: 0.6778256216611293 worst\n",
-    "SVM 0.7940558943755874 better\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9142225",
-   "metadata": {},
-   "source": [
-    "The performance of the custom tokenizer decreses with biograms and even more with only unigrams."
+    "RF f1 score: 0.6778256216611293 same\n",
+    "SVM 0.7940558943755874 same\n",
+    "min_df=4, max_df=0.8\n",
+    "RF f1 score: 0.6793783617299914 better\n",
+    "SVM 0.7924195085147825 worst\n",
+    "min_df=5, max_df=0.8\n",
+    "RF f1 score: 0.6731302798204378 worst\n",
+    "SVM f1 score: 0.7916977588672531 worst\n",
+    "\n",
+    "After running diffrent values, the reducuction of very common words doesn't make any changes. But performance improves for the SVM classifier removing tokens present in fewer that 3 documments and decreces for the Random Forest classifier.\n"
    ]
   },
   {
